# rightsize-cli

./: .env.example  .gitignore  README.md  pyproject.toml
data/: test_cases.csv  test_cases_without_expected_output.csv
prompts/: classify.j2
src/rightsize/: cli.py  client.py  config.py  judge.py  models.py  output.py  pricing.py  runner.py  template.py
