[project]
name = "rightsize-cli"
version = "0.1.3"
description = "Benchmark prompts against multiple LLMs via OpenRouter to find the cheapest model that works."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  {name = "Nehme AI Labs", email = "support@nehmeailabs.com"},
]
keywords = ["llm", "benchmark", "openrouter", "ai", "cost-optimization", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "httpx>=0.27",
  "rich>=13.0",
  "python-dotenv>=1.0",
  "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/NehmeAILabs/rightsize-cli"
Repository = "https://github.com/NehmeAILabs/rightsize-cli.git"

[project.scripts]
rightsize = "rightsize.cli:app"
rightsize-cli = "rightsize.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rightsize"]
